--- a/resources/application.properties
+++ b/resources/application.properties
@@ -45,5 +45,6 @@ retry.count=0
 #set 1 to suppress success log, when 0 it will also show verification success message
 report.log.skip.success=0
 webdriver.chrome.driver =resources/driver/chromedriver.exe
+<driver>.additional.capabilities=<capabilityname1>=<value1>,<capabilityname2>=<value2>
 system.webdriver.gecko.driver = <GECKODRIVER_PATH>
 webdriver.ie.driver = resources/driver/IEDriverServer.exe
